Closed Bug 1018680 Opened 11 years ago Closed 11 years ago

Fix jsd_xpc.cpp warning and mark js/ductwork, js/jsd, and js/xpconnet as FAIL_ON_WARNINGS

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33
Tracking Status
firefox32 --- wontfix
firefox33 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

After bug 880330 changed ContextOptions from a bitfield to a struct, jsdContext::SetOptions() is now comparing privateIsNSISupports() bool (0 or 1) against JSOPTION_PRIVATE_IS_NSISUPPORTS bit flag (3), which will never be equal: js\jsd\jsd_xpc.cpp(1684) : warning C4805: '!=' : unsafe mix of type 'bool' and type 'uint32_t' in operation Also mark some more warning-free js directories as FAIL_ON_WARNINGS: js/ductwork, js/jsd, js/xpconnet/tests, and js/xpconnect/wrappers.
Attachment #8432187 - Flags: review?(ejpbruel)
Comment on attachment 8432187 [details] [diff] [review] fix-jsd-warning.patch Review of attachment 8432187 [details] [diff] [review]: ----------------------------------------------------------------- Good catch!
Attachment #8432187 - Flags: review?(ejpbruel) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: